<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/courseIDEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/courseTableScrollView"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:layout_toLeftOf="@+id/searchButton"
        android:layout_weight="0.22"
        android:ems="10"
        android:hint="@string/enter_course"
        android:inputType="text"
        android:padding="10dp"
        android:paddingRight="40dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="37dp"
        android:layout_marginTop="25dp"
        android:onClick="searchCourseID"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/search_button"
        android:typeface="sans" />

    <ListView
        android:id="@+id/courseTableScrollView"
        android:layout_width="match_parent"
        android:layout_height="401dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/searchButton"
        android:layout_marginTop="38dp"
        android:background="@color/green"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:visibility="visible" >
    </ListView>

    <Button
        android:id="@+id/viewCourseListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/courseIDEditText"
        android:layout_below="@+id/courseTableScrollView"
        android:layout_marginLeft="425dp"
        android:layout_marginTop="33dp"
        android:text="@string/view_my_course_list" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Button
        android:id="@+id/clearListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/viewCourseListButton"
        android:layout_alignBottom="@+id/viewCourseListButton"
        android:layout_toRightOf="@+id/userNameTextView"
        android:onClick="clearList"
        android:text="@string/delete_button" />

</RelativeLayout>
