<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/retina_wood"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/taskListView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="78dp"
        android:background="@color/translucent_white"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:visibility="visible" >
    </ListView>

    <LinearLayout
        android:id="@+id/taskListForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:background="@color/translucent_white"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/taskTitleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:hint="@string/task_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/taskStatusEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:hint="@string/task_status"
            android:inputType="text" />

        <Button
            android:id="@+id/addNewTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:fontFamily="sans-serif-light"
            android:text="@string/add_new_tasks" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="27dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/project_colon"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/projectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/textView1"
        android:fontFamily="sans-serif-light"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

</RelativeLayout>