<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@color/eggshell" >

    <TextView
        android:id="@+id/userNameTextView"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userNameEditText"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordTextView"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignRight="@+id/passwordEditText"
        android:background="@color/grey"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceSmallInverse" >

     <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordTextView"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="30dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordConfirmTextView"
        android:layout_centerHorizontal="true"
        android:background="@color/grey"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/passwordConfirmTextView"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordConfirmEditText"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="30dp"
        android:text="@string/password_confirm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/createAccountButton"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/passwordConfirmTextView"
        android:layout_marginBottom="143dp"
        android:gravity="center"
        android:text="@string/create_account" />

    <EditText
        android:id="@+id/passwordConfirmEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createAccountButton"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_marginBottom="27dp"
        android:background="@color/grey"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userNameTextView"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:paddingTop="20dp"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="50sp" />

</RelativeLayout>