<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="5dp"
    tools:context=".ProjectsFragment" >

    <LinearLayout
        android:id="@+id/nested_layout"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_weight="0.71"
        android:animateLayoutChanges="true"
        android:clickable="true"
        android:duplicateParentState="true"
        android:onClick="onProjectClick"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:visibility="visible" >

        <TextView
            android:id="@+id/project_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:clickable="true"
            android:onClick="onProjectClick"
            android:text="@string/placeholder"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:clickable="true"
            android:onClick="onProjectClick"
            android:text="@string/id_colon"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/project_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:clickable="true"
            android:onClick="onProjectClick"
            android:text="@string/placeholder_short"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/deleteProjectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:clickable="true"
        android:contentDescription="@+id/deleteProject"
        android:onClick="deleteProjectButton"
        android:src="@android:drawable/ic_input_delete"
        android:visibility="visible" />

</LinearLayout>